--- a/app/src/main/res/layout/activity_submenu_asia.xml
+++ b/app/src/main/res/layout/activity_submenu_asia.xml
@@ -22,7 +22,7 @@
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#FFFFFF"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/button"
@@ -45,6 +45,6 @@
         android:layout_marginStart="-44dp"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="203dp"
-        android:contentDescription="iniciar Actividad"
+        android:contentDescription="@string/iniciar"
         app:srcCompat="@drawable/continentasia" />
 </RelativeLayout>
